--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -32,7 +32,7 @@
                 document.body.prepend(div)
             }
         </script>
-        <div id="root"></div>
+        <div id="root" style="isolation: isolate;"></div>
         {% include "live_server_inject.html" %}
     </body>
 </html>
